[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/GrassBackground.png" type="Texture" id=1]
[ext_resource path="res://Font/settings_menu.theme" type="Theme" id=2]
[ext_resource path="res://TittleScreen/SettingsMenu.gd" type="Script" id=3]

[node name="SettingsMenu" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 160, 96 )
z_index = -99
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 320, 192 )

[node name="SettingTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Tabs" parent="SettingTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 28.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoSettings" type="GridContainer" parent="SettingTabs/Video/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 302.0
margin_bottom = 155.0
custom_constants/vseparation = 0
columns = 2

[node name="DisplayModeLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_right = 71.0
margin_bottom = 13.0
text = "Display Mode"

[node name="DisplayOptionButton" type="OptionButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 227.0
margin_right = 292.0
margin_bottom = 13.0
size_flags_horizontal = 10
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="VsyncLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 22.0
margin_right = 71.0
margin_bottom = 35.0
text = "Vsync"

[node name="VsyncButton" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 228.0
margin_top = 13.0
margin_right = 292.0
margin_bottom = 45.0
size_flags_horizontal = 10

[node name="DisplayFPSLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 54.0
margin_right = 71.0
margin_bottom = 67.0
text = "Display FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayFPSButton" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 228.0
margin_top = 45.0
margin_right = 292.0
margin_bottom = 77.0
size_flags_horizontal = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxFPSLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 78.0
margin_right = 71.0
margin_bottom = 91.0
text = "Max FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 116.0
margin_top = 77.0
margin_right = 292.0
margin_bottom = 93.0
size_flags_horizontal = 10

[node name="MaxFPSVal" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
margin_top = 1.0
margin_right = 22.0
margin_bottom = 14.0
text = "Max"

[node name="MaxFPSSlider" type="HSlider" parent="SettingTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
margin_left = 26.0
margin_right = 176.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BloomLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 102.0
margin_right = 71.0
margin_bottom = 115.0
text = "Bloom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BloomButton" type="CheckButton" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 228.0
margin_top = 93.0
margin_right = 292.0
margin_bottom = 125.0
size_flags_horizontal = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrightnessLabel" type="Label" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_top = 126.0
margin_right = 71.0
margin_bottom = 139.0
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingTabs/Video/MarginContainer/VideoSettings"]
margin_left = 142.0
margin_top = 125.0
margin_right = 292.0
margin_bottom = 141.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Tabs" parent="SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 28.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioSettings" type="GridContainer" parent="SettingTabs/Audio/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 302.0
margin_bottom = 155.0
custom_constants/vseparation = 6
columns = 2

[node name="MasterVolLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_top = 1.0
margin_right = 81.0
margin_bottom = 14.0
text = "Master Volumn"

[node name="MasterVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 142.0
margin_right = 292.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_top = 23.0
margin_right = 81.0
margin_bottom = 36.0
text = "Music Volumn"

[node name="MusicVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 142.0
margin_top = 22.0
margin_right = 292.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxVolLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_top = 45.0
margin_right = 81.0
margin_bottom = 58.0
text = "SFX Volumn"

[node name="SfxVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 142.0
margin_top = 44.0
margin_right = 292.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gameplay" type="Tabs" parent="SettingTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 28.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Gameplay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameplaySettings" type="GridContainer" parent="SettingTabs/Gameplay/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 302.0
margin_bottom = 155.0
custom_constants/vseparation = 6
columns = 2

[node name="FovLabel" type="Label" parent="SettingTabs/Gameplay/MarginContainer/GameplaySettings"]
margin_top = 1.0
margin_right = 97.0
margin_bottom = 14.0
text = "FOV"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingTabs/Gameplay/MarginContainer/GameplaySettings"]
margin_left = 124.0
margin_right = 292.0
margin_bottom = 16.0
size_flags_horizontal = 10

[node name="FovVal" type="Label" parent="SettingTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer"]
margin_top = 1.0
margin_right = 14.0
margin_bottom = 14.0
text = "70"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FovSlider" type="HSlider" parent="SettingTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer"]
margin_left = 18.0
margin_right = 168.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
value = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseSensLabel" type="Label" parent="SettingTabs/Gameplay/MarginContainer/GameplaySettings"]
margin_top = 23.0
margin_right = 97.0
margin_bottom = 36.0
text = "Mouse sensitivity"

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingTabs/Gameplay/MarginContainer/GameplaySettings"]
margin_left = 124.0
margin_top = 22.0
margin_right = 292.0
margin_bottom = 38.0
size_flags_horizontal = 10

[node name="MouseSensVal" type="Label" parent="SettingTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer2"]
margin_top = 1.0
margin_right = 14.0
margin_bottom = 14.0
text = "0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseSensSlider" type="HSlider" parent="SettingTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer2"]
margin_left = 18.0
margin_right = 168.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.05
max_value = 3.0
step = 0.01
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="SettingTabs/Video/MarginContainer/VideoSettings/DisplayOptionButton" to="." method="_on_DisplayOptionButton_item_selected"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/VsyncButton" to="." method="_on_VsyncButton_toggled"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/DisplayFPSButton" to="." method="_on_DisplayFPSButton_toggled"]
[connection signal="value_changed" from="SettingTabs/Video/MarginContainer/VideoSettings/HBoxContainer/MaxFPSSlider" to="." method="_on_MaxFPSSlider_value_changed"]
[connection signal="toggled" from="SettingTabs/Video/MarginContainer/VideoSettings/BloomButton" to="." method="_on_BloomButton_toggled"]
[connection signal="value_changed" from="SettingTabs/Video/MarginContainer/VideoSettings/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/SfxVolSlider" to="." method="_on_SfxVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer/FovSlider" to="." method="_on_FovSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Gameplay/MarginContainer/GameplaySettings/HBoxContainer2/MouseSensSlider" to="." method="_on_MouseSensSlider_value_changed"]
